<resources>
    <string name="app_name">MyPub</string>
    <string name="spinner_title">Select Category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--authentication-->

    <string name="otp">Enter Your OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_password_text">Reset Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="validating_data">Validating your information…</string>
    <string name="check_network_status">Checking Network Stability…</string>
    <string name="cancel">Cancel</string>
    <string name="app_authentication_registration">Registration: Registration</string>

    <string name="login">Login</string>
    <string name="hint_password">Password</string>
    <string name="email_or_mobile_number">Mobile Number</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="registration">Registartion</string>
    <string name="email">Enter email</string>
    <string name="mobile">Enter mobile number</string>
    <string name="create">Create a new</string>
    <string name="name">Enter name</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="verify_phone_auth">Verify</string>


    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="password">Password</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_current_password">Enter_Current_password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_your_password">Re enter your password</string>
    <string name="register">Register</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>

    <string name="ticket_price_details">%1$s x %2$s</string>
</resources>
