<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_yellow_button_height"
        android:layout_below="@+id/view_button_body"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/curved_button"
        android:id="@+id/ok_button"
        android:text="@string/submit"
        style="@style/yellow_button"/>
    <LinearLayout
        android:id="@+id/view_button_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/loginlayout"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:orientation="vertical"
        android:paddingBottom="70dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView10"
            android:layout_width="177dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/registration"
            style="@style/logintitle"
            android:textSize="32sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextName"
                style="@style/formlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextEmail"
                style="@style/formlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextMobile"
                style="@style/formlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/mobile"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>