<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_yellow_button_height"
        android:layout_below="@+id/view_button_body"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/curved_button"
        android:id="@+id/ok_button"
        android:text="@string/login"
        style="@style/yellow_button"/>
    <LinearLayout
        android:id="@+id/view_button_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/loginlayout"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:orientation="vertical"
        android:paddingBottom="70dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView10"
            android:layout_width="177dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/login"
            style="@style/logintitle"
            android:textSize="32sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.09">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextEmail"
                style="@style/formlabel"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/email_or_mobile_number"
                android:text="9177244295"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/textInputLayout4"
            android:layout_weight="0.08">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:text="1234566"
                style="@style/formlabel"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/ok_button">
        <android.support.v7.widget.AppCompatButton
            android:layout_weight="1"
            android:id="@+id/forgot_password"
            style="@style/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password" />
        <android.support.v7.widget.AppCompatButton
            android:layout_weight="1"
            android:id="@+id/new_account"
            style="@style/forgotpassword"

            android:gravity="center|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/create" />
    </LinearLayout>
</RelativeLayout>