<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:id="@+id/body">

    <RelativeLayout
        style="@style/authentication_content_bg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <EditText
                style="@style/authentication_edit_text"
                android:inputType="number"
                android:id="@+id/phone_no"
                android:hint="@string/email_or_mobile_number"
                android:fontFamily="@font/kaushanscriptregular"/>

            <EditText
                style="@style/authentication_edit_text"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:fontFamily="@font/kaushanscriptregular"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="25dp">


<CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/saveLoginCheckBox"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:fontFamily="@font/kaushanscriptregular"
        />
</LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                style="@style/authentication_button_submit"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:fontFamily="@font/kaushanscriptregular"
                />

            <LinearLayout
                android:layout_marginTop="0dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                >

                <TextView
                    android:id="@+id/forgot"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    android:fontFamily="@font/chunkfive"
                    />
                <TextView
                    android:id="@+id/register"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="New Account?"
                    android:gravity="center|right"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    android:fontFamily="@font/chunkfive"
                    />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>