<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/view_button_body"
        android:background="@drawable/loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="70dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_verification_code"
            android:layout_marginTop="11dp"
            android:id="@+id/textInputLayout1">
            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_text_hint"
                android:textColor="@color/cardview_dark_background"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="Veriication Sucessfull" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_below="@+id/detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:padding="5dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_yellow_button_height"
        android:layout_below="@+id/view_button_body"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="2.0">

        <Button
            android:layout_marginEnd="4dp"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:background="@drawable/curved_button"
            android:id="@+id/button_verify_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/verify_phone_auth"/>

        <Button
            android:layout_marginStart="4dp"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:id="@+id/button_resend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/curved_button"
            android:text="@string/resend_phone_auth"/>
    </LinearLayout>
</RelativeLayout>
<!--
<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/footer_yellow_button_height"
            android:layout_below="@+id/view_button_body"
            android:layout_centerHorizontal="true"
            android:id="@+id/ok_button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:minWidth="150dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/curved_button"
            android:text="@string/forgot_password"
            style="@style/yellow_button"/>
        <LinearLayout
            android:id="@+id/view_button_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/loginlayout"
            android:gravity="center_horizontal"
            android:weightSum="1"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_body_view_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_your_password"
                style="@style/logintitle"
                android:textSize="@dimen/logname" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:layout_marginTop="11dp"
                android:id="@+id/textInputLayout1"
                android:layout_weight="0.08">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText1"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_number"
                    style="@style/formlabel"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:layout_marginTop="11dp"
                android:id="@+id/textInputLayout2"
                android:layout_weight="0.08">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText2"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_number"
                    style="@style/formlabel"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
-->
